# brain_mri

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  ecr.sh  ecs.sh  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: main.py  requirements.txt  tumor_classifier.py
mlruns/0/: meta.yaml
mlruns/0/00f3c2f983f44542be533195c9e50a0b/: meta.yaml
mlruns/0/09bf57523cbc4caa8cfcafefd67981d1/: meta.yaml
mlruns/0/0ae787ca4ad14d4cae6434e00f35db95/: meta.yaml
mlruns/0/0cdb2fec73df4b66abfcdd6d111a350a/: meta.yaml
mlruns/0/24ac0b52fe9243868efcba88c134f65f/: meta.yaml
mlruns/0/68ded3af4b6e47cfbf5366f812d509de/: meta.yaml
mlruns/0/6906729d7d034e30aba73dcd10ab2922/: meta.yaml
mlruns/0/9f4ed17c8b9e4923a57c5e422b011271/: meta.yaml
mlruns/0/df87d3c35e964e679f48c2037fdda424/: meta.yaml
mlruns/0/e244cf7037e44824950391ef73432158/: meta.yaml
mlruns/0/e37f839b76ad4062803798b2af284a80/: meta.yaml
mlruns/0/e44c5c44e74847b39222da482a873c0e/: meta.yaml
mlruns/940519646729953488/: meta.yaml
mlruns/940519646729953488/09d53c3381d5482b995ba059aa781a9c/: meta.yaml
mlruns/940519646729953488/0b40c49b726f4c52b9608c1e06773ef7/: meta.yaml
mlruns/940519646729953488/13e2ed8c8c7740619fc5765b238a36e4/: meta.yaml
mlruns/940519646729953488/338b1e509a414fcaa91178ad8b4fdcbc/: meta.yaml
mlruns/models/TumorClassifier/: meta.yaml
notebook/: fetch_data.ipynb  train.ipynb
src/: extra.py  fetch_data.py  fetch_model.py  inspect.py  pipeline.py  serve.py  serve_local.py  train.py  utils.py
tests/: test_pipeline.py
(+144 files in other folders)
